# Scaler-Hackathon

./: README.md  config.py  pyproject.toml
Diagrams/: class_diagram.drawio  flow_diagram.drawio
solutions/: admission_prediction.csv  generateMassFile.py  main.py  winsetup.py
