[tool.poetry]
name = "scaler"
version = "0.1.0"
description = ""
authors = ["suresh-recode <suresh.thamilshelvan@recodesolutions.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
cx-Freeze = "^6.10"
requests = "^2.27.1"
gdown = "^4.4.0"
firebase = "^3.0.1"
python-jwt = "^3.3.2"
gcloud = "^0.18.3"
sseclient = "^0.0.27"
pycryptodome = "^3.14.1"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
